--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="shortcut icon" href="#">
         <!-- link-css-file -->
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="css/style.css"/>
+        <link rel="stylesheet" type="text/css" href="./style.css"/>
         <!-- using awesome font -->
         <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
     </head>
@@ -130,7 +130,7 @@
                 <!--type----------->
                 <div class="s-type">SEO</div>
                 <!--name------->
-                <img src="images/building-3.jfif">
+                <img src="images/building-3.jpg">
             </div>
             <!--text----------------->
             <div class="s-b-text">
